# ImageGoNord-pip

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Pipfile  README.md  action.yml  index.py  pyproject.toml  setup.py  upload-release.sh
.github/: FUNDING.yml
.github/workflows/: upload-release.yml
ImageGoNord/: GoNord.py  GoNord_test.py  __init__.py  __main__.py
ImageGoNord/utility/: ConvertUtility.py  model.py  palette_loader.py  quantize.py
docs/: README.md
docs/example/: index.py
tests/: test_GoNord.py  test_ImageGoNordCLI.py
